--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,3 +1,27 @@
-# This file stores configurations for your Shopify app.
+# Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
+name = "navi-test"
+client_id = "9b5ee52e4f68733be84532676b3d9754"
+application_url = "https://helping-india-debut-civilian.trycloudflare.com"
+embedded = true
+
+[access_scopes]
+# Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
 scopes = "write_products"
+
+[auth]
+redirect_urls = [
+  "https://helping-india-debut-civilian.trycloudflare.com/auth/callback",
+  "https://helping-india-debut-civilian.trycloudflare.com/auth/shopify/callback",
+  "https://helping-india-debut-civilian.trycloudflare.com/api/auth/callback"
+]
+
+[webhooks]
+api_version = "2024-01"
+
+[pos]
+embedded = false
+
+[build]
+automatically_update_urls_on_dev = true
+dev_store_url = "vibe-app.myshopify.com"
